crates/swc_ecma_parser/tests/test262-error-references/fail/0557c70da3f698b5.module.js.stderr
error: Unexpected token `,`. Expected an identifier
 --> $DIR/tests/test262-parser/fail/0557c70da3f698b5.module.js:1:11
  |
1 | import {b,,c} from 'a';
  |           ^

